--- a/EZ2FAI/EZ2FAI.csproj
+++ b/EZ2FAI/EZ2FAI.csproj
@@ -498,8 +498,15 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Hit.cs" />
+        <Compile Include="JTM.cs" />
+        <Compile Include="Levelload.cs" />
         <Compile Include="Main.cs" />
+        <Compile Include="MPSet.cs" />
+        <Compile Include="Patchs.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="RandomStringGenerator.cs" />
+        <Compile Include="Resets.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
